fix: fixed full-bleed, added featured image

--- a/src/_includes/styles/_index.css
+++ b/src/_includes/styles/_index.css
@@ -75,7 +75,8 @@ picture {
 }
 
 ::selection {
-  background-color: var(--color-bg-primary);
+  background-color: var(--color-secondary);
+  color: var(--color-bg-muted);
 }
 
 :focus {
