--- a/src/_includes/styles/post.css
+++ b/src/_includes/styles/post.css
@@ -19,21 +19,32 @@
   margin: var(--space-l) 0;
 }
 
+.featured-container {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin-bottom: var(--space-xxl);
+  max-width: 100%;
+}
+
+.featured {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 .attachments {
+  flex: 0;
   display: flex;
   flex-wrap: wrap;
   align-self: flex-start;
   gap: var(--space-l);
-  border-radius: var(--border-radius-m);
-  padding: var(--space-l);
-  min-width: var(--author-width);
+  border-top: var(--border-width) solid var(--color-bg-muted);
   width: 100%;
-  background-color: var(--color-bg-muted);
 }
 
 .attachments h2 {
   flex: 1 0 100%;
-  margin-top: 0;
   font-size: var(--font-size-h4);
 }
 
@@ -60,8 +71,15 @@
 
   .attachments {
     position: sticky;
+    border-radius: var(--border-radius-m);
+    padding: var(--space-l);
     top: var(--space-xxl);
     min-width: var(--album-width);
+    background-color: var(--color-bg-muted);
+  }
+
+  .attachments h2 {
+    margin-top: 0;
   }
 }
 
