--- a/src/_includes/styles/typography.css
+++ b/src/_includes/styles/typography.css
@@ -184,6 +184,7 @@ p {
   border: var(--border-width-s) solid var(--color);
   padding: var(--space-s) var(--space-m);
   color: var(--color);
+  text-decoration: none;
 }
 
 .categories a:hover,
